# PythonWebExamples

module01/patterns/: template_method.py
module01/patterns/observer/: observer.py
module01/solid/D/: 01.py
module01/solid/I/: 01.py  02.py
module01/solid/L/: 01.py
module01/solid/O/: 01.py  02.py
module01/solid/S/: 01_01.py  01_02.py
module02/: readme.md
module03/: agenda.md
module03/flask-node/: docker-compose.yaml
module03/flask-node/grade-submission-api/: Dockerfile
module03/java/: Dockerfile
module03/postgres_ex/: docker-compose.yaml
module03/python-script/: Dockerfile  main.py
module04/async_ex/: pyproject.toml
module04/async_ex/src/async_ex/: 01.py  05_aiohttp.py  async_commands.md  websocket_vs_http.md
module04/async_ex/src/async_ex/check_ip/: async_ex.py  sync.py
module04/async_ex/src/async_ex/server-ws/: server-ws.py
module04/async_ex/src/async_ex/sort-files/: async_ex.py  sync.py
module04/flask_new/: pyproject.toml
module04/flask_new/src/flask_new/: .env  app.py
module04/httpv2/: 404.html  blog.html  contact.html  index.html  main.py
module04/simple-http/: main.py
module05/: pyproject.toml
pydantic_ex/: pyproject.toml
todos/: docker-compose.yaml  pyproject.toml
todos/migrations/: env.py
todos/migrations/versions/: 241c8be21c1e_created_at_column_for_user_table.py  60497285453e_init_migration.py
todos/src/: config.ini  config.py  main.py
todos/src/database/: db.py  models.py  repository.py
todos/src/static/: index.js  style.css
todos/src/templates/: base.html  login.html  register.html  todos.html
(+6 files in other folders)
