[project]
name = "todos"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleh Andrus",email = "andrusoleg123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
]

[tool.poetry]
packages = [{include = "todos", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
