[project]
name = "async-ex"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleh Andrus",email = "andrusoleg123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio (>=4.0.0,<5.0.0)",
    "faker (>=37.5.3,<38.0.0)"
]

[tool.poetry]
packages = [{include = "async_ex", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
